# ClipBook

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  callstack.sh  clipbook.mobileconfig  index.html  mobrowser.conf.json  molybden.conf.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts  welcome.html
.github/workflows/: release.yml
Workflow/specs/active/ai-improvements/: design.md  requirements.md  tasks.md
docs/clipsync-project/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  FILE_SHARING_ARCHITECTURE.md  NAMING_CONVENTIONS.md  PROJECT_STRUCTURE.md  README.md
docs/specs/: ai-service-improvements.md  api-specification.md  code-quality-improvements.md  code-quality-tasks.md  cross-platform-clipboard-sync-architecture.md  theme-color-audit.md  theme-system-ui-improvements.md
public/locales/de/: translation.json
public/locales/en/: translation.json
public/locales/en-GB/: translation.json
public/locales/es/: translation.json
public/locales/it/: translation.json
public/locales/ja/: translation.json
public/locales/pt-BR/: translation.json
public/locales/zh-CN/: translation.json
src/: Accessibility.tsx  App.css  App.tsx  ClipboardItems.tsx  Enjoy.tsx  Privacy.tsx  Settings.tsx  Shortcuts.tsx  Sidebar.tsx  Welcome.tsx  actions.tsx  app.css  app_main.tsx  archive.tsx  data.tsx  db.tsx  i18n.ts  index.css  licensing.tsx  pref.tsx  tags.tsx  welcome_main.tsx
src-cpp/assets/: app-Info.plist  app-helper (Alerts)-Info.plist  app-helper (GPU)-Info.plist  app-helper (Plugin)-Info.plist  app-helper (Renderer)-Info.plist  app-helper-Info.plist  app.icns  entitlements.plist
src-cpp/resources/: sound.aiff
src-cpp/src/: active_app_observer.h  active_app_observer.mm  app_settings.cc  app_settings.h  app_settings_mac.h  app_settings_mac.mm  clipboard_manager.cc  clipboard_manager.h  clipboard_reader.cc  clipboard_reader.h  clipboard_reader_mac.h  clipboard_reader_mac.mm  main.cc  main_app.cc  main_app.h  main_app_mac.h  main_app_mac.mm  main_app_win.cc  main_app_win.h  quick_look_previewer_mac.h  quick_look_previewer_mac.mm  url.cc  url.h  url_request_interceptor.cc  url_request_interceptor.h  utils.cc  utils.h  webview.cc  webview.h  welcome_window.cc  welcome_window.h
src/ai/: ai-context.ts  ai-service.ts  ollama-provider.ts  openai-provider.ts  perplexity-provider.ts  prompts.ts
src/ai/prompts/: core-prompts.ts  image-prompts.ts  index.ts  quick-transforms.ts
src/app/: AIRewriteDialog.tsx  Actions.tsx  ActionsBar.tsx  App.tsx  AppSidebar.tsx  AppSidebarCollectionItem.tsx  AppSidebarItem.tsx  AppSidebarSourceItem.tsx  AppSidebarSourceItems.tsx  AppSidebarTagItem.tsx  CitationsPanel.tsx  ClipDropdownMenu.tsx  Commands.tsx  FormatTextCommands.tsx  FreeLicenseMessage.tsx  HistoryItemContextMenu.tsx  HistoryItemMenu.tsx  HistoryItemPane.tsx  HistoryItemPreviewPane.tsx  HistoryItemsPane.tsx  HistoryPane.tsx  Icons.tsx  ImageAnalysisDialog.tsx  InfoPane.tsx  ItemInfoPane.tsx  ItemTags.tsx  ItemsInfoPane.tsx  ModelSwitcher.tsx  OpenWithCommands.tsx  PasteTransformationCommands.tsx  Preferences.tsx  PreviewActions.tsx  PreviewColorPane.tsx  PreviewFilePane.tsx  PreviewImagePane.tsx  PreviewItemsPane.tsx  PreviewLinkCard.tsx  PreviewLinkPane.tsx  PreviewLinkProgressBar.tsx  PreviewPane.tsx  (+16 more)
src/components/: Actions.tsx  ActionsBar.tsx  History.tsx  HistoryItem.tsx  HistoryItemList.tsx  HistoryItemListPane.tsx  HistoryItemPane.tsx  HistoryItemPreview.tsx  HistoryItemPreviewPane.tsx  HistoryItemsPane.tsx  HistoryPane.tsx  IgnoreAppsPane.tsx  Preferences.tsx  SearchBar.tsx  ShortcutInput.tsx  ShortcutLabel.tsx  Sidebar.tsx  StatusBar.tsx  ToolBar.tsx  pref.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  radio-group.tsx  resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx  switch.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/lib/: crypto.ts  shortcuts.ts  utils.ts
src/settings/: AISettings.tsx  About.tsx  ActivationErrorMessage.tsx  Appearance.tsx  Calculator.tsx  Calendar.tsx  CheckForUpdatesResult.tsx  General.tsx  History.tsx  IgnoreAppsPane.tsx  ImportExport.tsx  License.tsx  Privacy.tsx  RetentionPeriodSlider.tsx  Settings.tsx  SettingsSidebar.tsx  SettingsSidebarItem.tsx  ShortcutInput.tsx  Shortcuts.tsx  Storage.tsx  Tools.tsx
src/welcome/: Accessibility.tsx  Enjoy.tsx  Welcome.tsx
